// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App has a valid snapshot 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="redux"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  >
    <div
      className="table-header"
    >
      <span
        style={
          Object {
            "width": "40%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
           
           Title 
          <i
            className="fas fa-long-arrow-alt-down"
          />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "30%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
           
           Author 
          <i
            className="fas fa-long-arrow-alt-down"
          />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
           
          Comments 
          <i
            className="fas fa-long-arrow-alt-down"
          />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
           
           Points 
          <i
            className="fas fa-long-arrow-alt-down"
          />
        </button>
      </span>
      <span
        style={
          Object {
            "width": "10%",
          }
        }
      >
        Archive
      </span>
    </div>
  </div>
  <div
    className="interactions"
  >
    <div>
      Loading...
    </div>
  </div>
</div>
`;

exports[`Button has a valid snapshot 1`] = `
<button
  className=""
  onClick={[Function]}
  type="button"
>
   
  Give Me More
</button>
`;

exports[`Search has a valid snapshot 1`] = `
<form
  onSubmit={[Function]}
>
  <input
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table has a valid snapshot 1`] = `
<div
  className="table"
>
  <div
    className="table-header"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <button
        className="button-inline button-active"
        onClick={[Function]}
        type="button"
      >
         
         Title 
        <i
          className="fas fa-long-arrow-alt-down"
        />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
         
         Author 
        <i
          className="fas fa-long-arrow-alt-down"
        />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
         
        Comments 
        <i
          className="fas fa-long-arrow-alt-down"
        />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className="button-inline"
        onClick={[Function]}
        type="button"
      >
         
         Points 
        <i
          className="fas fa-long-arrow-alt-down"
        />
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Archive
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        1
      </a>
    </span>
    <span
      className={
        Object {
          "width": "30%",
        }
      }
    >
      1
    </span>
    <span
      className={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      className={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      className={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
         
        Dismiss
      </button>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      className={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href={undefined}
      >
        2
      </a>
    </span>
    <span
      className={
        Object {
          "width": "30%",
        }
      }
    >
      2
    </span>
    <span
      className={
        Object {
          "width": "10%",
        }
      }
    >
      1
    </span>
    <span
      className={
        Object {
          "width": "10%",
        }
      }
    >
      2
    </span>
    <span
      className={
        Object {
          "width": "10%",
        }
      }
    >
      <button
        className=""
        onClick={[Function]}
        type="button"
      >
         
        Dismiss
      </button>
    </span>
  </div>
</div>
`;
